Commit 2: agregando h2, h3, h4 con contenidos personales

--- a/index.html
+++ b/index.html
@@ -20,5 +20,26 @@
      Quiero aprender a crear sitios web modernos, interactivos y funcionales que puedan resolver problemas reales. <br>
      Además, creo que dominar estas habilidades me abrirá muchas oportunidades profesionales en el futuro <br>
      y me permitirá contribuir al mundo digital de manera significativa.</p>
+     <!-- Subtítulo sobre estudios escolares -->
+    <h2>¿En dónde cursaste tus estudios escolares?</h2>
+    <p>Realicé mis estudios de educación primaria en la Institución Educativa ruarl de cusco, <br>
+     donde desarrollé mis primeras habilidades académicas y sociales. Posteriormente, <br>
+     cursé mi educación secundaria en el colegio Libertadores de América, una institución que me brindó una formación integral <br>
+      y me permitió descubrir mi pasión por las ciencias exactas y la tecnología.</p>
+    <!-- Subtítulo sobre elección de carrera -->
+    <h2>¿Por qué escogió esta Carrera profesional?</h2>
+    <p>Elegí la carrera de Ingeniería de Sistemas porque desde pequeño me fascinaba el mundo de las computadoras y la tecnología. <br>
+     Me emocionaba entender cómo funcionan los programas, cómo se crean las aplicaciones y cómo la tecnología puede resolver problemas complejos de manera elegante.</p>
+     <!-- Subtítulo de tercer nivel sobre hobbies -->
+    <h3>Mis hobbies</h3>
+    <p>En mi tiempo libre disfruto mucho de diversas actividades que me ayudan a relajarme y seguir aprendiendo. <br>
+        Me gusta hacer musica y tambien escucharlo. También practico deportes como el fútbol y futsal, <br>
+        lo cual me ayuda a mantenerme en forma y desarrollar el trabajo en equipo. Además, disfruto viendo series y películas.</p>
+    <!-- Subtítulo de cuarto nivel sobre redes sociales -->
+    <h4>Mis redes sociales</h4>
+    <p>Mantengo presencia en varias redes sociales donde casi no publico nada de mi vida.  <br>
+        Uso LinkedIn para conectar con profesionales del área de tecnología y mantenerme actualizado sobre oportunidades laborales. <br>
+        En GitHub comparto mis proyectos de programación y colaboro en proyectos de código abierto. <br>
+        También uso Discord para comunicarme con mis compañeros de estudio.</p>
 </body>
 </html>
