Commit 3: agregadas imgenes locales/remotas saltos de linea

--- a/index.html
+++ b/index.html
@@ -33,13 +33,27 @@
      <!-- Subtítulo de tercer nivel sobre hobbies -->
     <h3>Mis hobbies</h3>
     <p>En mi tiempo libre disfruto mucho de diversas actividades que me ayudan a relajarme y seguir aprendiendo. <br>
-        Me gusta hacer musica y tambien escucharlo. También practico deportes como el fútbol y futsal, <br>
-        lo cual me ayuda a mantenerme en forma y desarrollar el trabajo en equipo. Además, disfruto viendo series y películas.</p>
+        Me gusta hacer musica y tambien escucharlo.</p>
+        <!-- Imagen remota de hacer musica -->
+    <img src="https://st2.depositphotos.com/1034986/6754/i/600/depositphotos_67544177-stock-photo-handsome-big-moustache-hipster-man.jpg" alt="tocando mandolina" width="300" height="200">
+    <br> <!-- Salto de línea -->
+    <p>También practico deportes como el fútbol y futsal,lo cual me ayuda a mantenerme en forma y desarrollar el trabajo en equipo. Además, disfruto viendo series y películas.</p>
+    <!-- Imagen local de deporte-->
+    <img src="images/hobies-futbol.jpg" alt="Haciendo deporte" width="300" height="200">
+     <br> <!-- Salto de línea -->
     <!-- Subtítulo de cuarto nivel sobre redes sociales -->
     <h4>Mis redes sociales</h4>
     <p>Mantengo presencia en varias redes sociales donde casi no publico nada de mi vida.  <br>
-        Uso LinkedIn para conectar con profesionales del área de tecnología y mantenerme actualizado sobre oportunidades laborales. <br>
-        En GitHub comparto mis proyectos de programación y colaboro en proyectos de código abierto. <br>
-        También uso Discord para comunicarme con mis compañeros de estudio.</p>
+        Uso LinkedIn para conectar con profesionales del área de tecnología y mantenerme actualizado sobre oportunidades laborales.</p>
+     <!-- Imagen local de linkedin -->
+     <img src="images/logo-linkedin.png" alt="Logo de linkedin" width="50" height="50">
+     <br> <!-- Salto de línea -->
+    <p>En GitHub comparto mis proyectos de programación y colaboro en proyectos de código abierto. </p>
+     <!-- Imagen local de git hub -->
+     <img src="images/logo-git.jpg" alt="Logo de git" width="50" height="50">
+     <br> <!-- Salto de línea -->
+    <p>También uso Discord para comunicarme con mis compañeros de estudio.</p>
+     <!-- Imagen remota de Discord -->
+     <img src="https://st2.depositphotos.com/36670030/47262/i/600/depositphotos_472621612-stock-photo-editorial-photo-discord-theme-illustrative.jpg" alt="Logo de GitHub" width="50" height="50">
 </body>
 </html>
